<resources>



    <array name="orstatus">
        <item>Seletct order Status</item>
        <!--        <item>Pending</item>-->
        <item>Accepted</item>
        <item>Completed</item>
    </array>
    <array name="orno">
        <item>Select Order No</item>
    </array>



    <string name="app_name">DOD-Easy Solutions</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="createAccount">SignUP</string>
    <string name="imgdescription">Logo of DOD App</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="OTP">OTP</string>
    <string name="msg">An OTP has been sent to your\n mobile number.</string>
    <string name="txtmsg">Enter the OTP</string>
    <string name="Confirm">Confirm</string>
    <string name="title_activity_available_services">AvailableServices</string>
    <string name="tab_text_1">Pending</string>
    <string name="tab_text_2">Accepted</string>
    <string name="Available_Services">Services</string>
    <string name="description">Transport Icon</string>
    <string name="Pickupplace">Pickup Point</string>
    <string name="Drop_point">Drop Point</string>
    <string name="No_of_pessengers">Seats</string>
    <string name="Time">PickUp Time</string>
    <string name="date">Pickup Date</string>
    <string name="details">Enter any extra details.</string>
    <string name="order">Place the Order</string>
    <string name="pagesno">No of Pages</string>
    <string name="copiesno">No of Copies</string>
    <string name="oneside">One Sided</string>
    <string name="twosided">Two Sided</string>
    <string name="color">Color Print</string>
    <string name="bandw">B/W Print</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload Document</string>
    <string name="printno">No of Prints</string>
    <string name="chats">Chats</string>
    <string name="orders">Orders</string>
    <string name="CancelOrder">Cancel Order</string>
    <string name="sending">sending OTP</string>
    <string name="tickettext">No orders Found</string>
    <string name="name">Name</string>
    <string name="not_registerd_create_account">Not registerd? Create Account.</string>
    <string name="already_registered_login">Already registered?Login.</string>
    <string name="textview">TextView</string>
    <string name="title_activity_orders">All Orders</string>
    <string name="tab_text_3">Completed</string>
    <string name="all_orders">All Orders</string>
    <string name="progressActivityEmptyTitlePlaceholder">No pending Orders found</string>
    <string name="progressActivityEmptyContentPlaceholder">Please place an order to continue...</string>
    <string name="progressActivityEmptyTitlePlaceholderA">No Accepted orders</string>
    <string name="progressActivityEmptyContentPlaceholderA">Your orders have\'t been accepted yet plz wait</string>
    <string name="markascompleted">Mark as Completed</string>
    <string name="deleteorder">Delete</string>
    <string name="progressActivityEmptyTitlePlaceholderC">No completed Order</string>
    <string name="progressActivityEmptyContentPlaceholderC">Your order is not completed yet. Plz wait</string>
    <string name="accept">Accept</string>
    <string name="enter_your_complaint">Enter Your Complaint</string>
    <string name="submit">Submit</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="todo">TODO</string>
</resources>
