<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="12">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dip"
        android:layout_height="24dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/print" />

    <ProgressBar
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_print_pickup_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:foregroundGravity="center"
        android:hint="@string/Pickupplace"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textColorHint="#3C3A3A" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/et_print_pages_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:foregroundGravity="center"
            android:hint="@string/pagesno"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="#3C3A3A" />

        <EditText
            android:id="@+id/et_print_print_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:foregroundGravity="center"
            android:hint="@string/printno"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="#3C3A3A" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/rb_print_bw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/bandw"
            android:textColorHighlight="#000000"
            android:textColorLink="#070707"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_print_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/color"
            android:textColorHighlight="#030303"
            android:textColorLink="#000000"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/bt_print_pickup_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#CDDC39"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Time"
        android:textColor="#1C5505"
        android:textSize="24sp" />

    <Button
        android:id="@+id/bt_print_upload"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:background="#1C5505"
        android:text="@string/upload"
        android:textColor="#E0E985"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_print_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:background="#00FFFFFF"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/details"
        android:inputType="textMultiLine"
        android:maxLength="300"
        android:textColorHint="#292828" />

    <Button
        android:id="@+id/bt_print_place_order"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="#FF9800"
        android:text="@string/order"
        android:textColor="#86050B"
        android:textSize="24sp" />

</LinearLayout>