<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layuot_conveyance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="12">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dip"
        android:layout_height="24dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/transport" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_cony_pickup_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:foregroundGravity="center"
        android:hint="@string/Pickupplace"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textColorHint="#3C3A3A"
        android:textCursorDrawable="@color/common_google_signin_btn_text_dark_focused" />

    <EditText
        android:id="@+id/et_cony_drop_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:foregroundGravity="center"
        android:hint="@string/Drop_point"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textColorHint="#3C3A3A"
        android:textCursorDrawable="@color/common_google_signin_btn_text_dark_focused" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <Spinner
            android:id="@+id/sp_cony_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/spinner_items" />

        <EditText
            android:id="@+id/et_cony_seats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:foregroundGravity="center"
            android:hint="@string/No_of_pessengers"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:textColorHint="#3C3A3A"
            android:textCursorDrawable="@color/common_google_signin_btn_text_dark_focused" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/bt_cony_pickuptime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#1C5505"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Time"
            android:textColor="#CDDC39"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bt_cony_pickdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#1C5505"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/date"
            android:textColor="#CDDC39"
            android:textSize="24sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_cony_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/details"
        android:inputType="textMultiLine"
        android:maxLength="300"
        android:textColorHint="#292828"
        android:textCursorDrawable="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="normal" />

    <Button
        android:id="@+id/bt_cony_place_order"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="#FF9800"
        android:text="@string/order"
        android:textColor="#86050B"
        android:textSize="24sp" />

</LinearLayout>